<resources>
    <string name="app_name">Калькулятор</string>
    <string name="minus">-</string>
    <string name="text_1">1</string>
    <string name="text_3">3</string>
    <string name="text_5">5</string>
    <string name="text_result">=</string>
    <string name="text_6">6</string>
    <string name="text_poin">.</string>
    <string name="text_9">9</string>
    <string name="text_div">÷</string>
    <string name="text_c">C</string>
    <string name="text_multiply">*</string>
    <string name="text_7">7</string>
    <string name="text_0">0</string>
    <string name="text_plus">+</string>
    <string name="text_percent">%</string>
    <string name="text_4">4</string>
    <string name="text_2">2</string>
    <string name="text_1divx">1/x</string>
    <string name="text_sqr">x²</string>
    <string name="text_sqrt">√</string>
    <string name="text_plus_minus">+/-</string>
    <string name="text_8">8</string>
    <string name="todo">TODO</string>
</resources>